# Release Notes:
## Main features:
- Created component named “calendarCard” using Bootstrap
- Added the following attributes the the class “calendarCard.component.ts”:
    -  date
    -  title
    -  description
- Created a list for all cards containing three lines of a date, title, and description
- Added angular routing
- Added layout components
- Created 5 new components and a for loop