@@ -1,4 +1,4 @@
-
+<wk-user-info-http>Loading user info...</wk-user-info-http>
 
 <router-outlet></router-outlet>
 
