@@ -1,0 +1,6 @@
+export interface UserInfo {
+    FirstName: string;
+    LastName: string;
+    mix_id: string;
+    GitHub: string;
+}
